--- a/src/styles/ChessPiece.css
+++ b/src/styles/ChessPiece.css
@@ -5,6 +5,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: grab;
+}
+
+.chess-piece:active {
+  cursor: grabbing;
 }
 
 .chess-piece img {
@@ -12,4 +17,5 @@
   height: 80%;
   object-fit: contain;
   pointer-events: none;
+  user-select: none;
 } 
