--- a/src/styles/TurnIndicator.css
+++ b/src/styles/TurnIndicator.css
@@ -10,7 +10,7 @@
 .player {
   padding: 10px 20px;
   border-radius: 5px;
-  background-color: #eee;
+  /* background-color: #eee; */
   opacity: 0.5;
   transition: all 0.3s ease;
 }
